
	* Fixed autonick crashbug in client library.  Affected file
	  lib/silcclient/client.c.

	* Fixed Unix implementation of SilcMutex to really assert if
	  the mutex is locked/unlcoked already.  Affected file
	  lib/silcutil/unix/silcunixmutex.c.

	* Fixed locking in silc_schedule_uninit.  It didn't lock
	  when dispatching timeout tasks.  Affected file is
	  lib/silcutil/silcschedule.c.

Thu Dec 12 12:06:59 CET 2002 Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Don't print signed messages when sending failed.  Affected files
	  irssi/src/silc/core/silc-[servers.c/commands.h] 

	* Send adquate signal when founding a channel by joing it.  Affect
	  file irssi/src/silc/core/client_ops.c

Wed Dec 11 21:46:19 CET 2002 Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Fix theme abstracts parsing.  Affected files irssi/default.theme,
	  irssi/src/fe-common/core/themes.c

Wed Dec 11 20:20:07 EET 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed close command to use the port correctly when closing
	  server connections.  Affected file silcd/idlist.c.

	* Check for NULL outbuf in silc_socket_write.  It is possible
	  that it is NULL is some odd case.  Affected files are
	  lib/silcutil/[unix/win32]/silc[unix/win32]sockconn.c.

	* Do not call final protocol callback for backup router
	  resuming protocol when closing connection.  It is closed
	  by timeout in case of error.  Affected file silcd/server.c.

	* Backup reconnect to router if backup resuming protocol
	  failed.  Affected file silcd/server_backup.c.

Wed Dec 11 10:01:26 CET 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed double free in SKE library error hadling when signature
	  error occurred.  Affected file lib/silcske/silcske.c.

	* Save the fingerprint to new SilcClientEntry after changing 
	  nickname.  Affected file lib/silcclient/client_notify.c.

	* Print SIGNOFF in Irssi SILC client only if the nickname is
	  known.  Prevents asserts in Irssi core.  It is possible we